# saxo-order

./: .flake8  .gitignore  .pre-commit-config.yaml  ASYNC_CLI_CODE_TEMPLATES.md  ASYNC_CLI_IMPLEMENTATION_GUIDE.md  ASYNC_CLI_PATTERNS_RESEARCH.md  ASYNC_RESEARCH_INDEX.md  ASYNC_RESEARCH_SUMMARY.md  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  README_ASYNC_RESEARCH.md  access_token.example  all_instruments.json  cli.py  config.yml  deploy.sh  docker-compose.yml  fix_duplicate_workflows.py  followup-stocks.json  lambda_function.py  mypy.ini  prod_config.yml  pyproject.toml  run_api.py  run_api_docker.py  stocks.json  test_cli.py  test_token.py  workflow.md  workflows.yml
.claude/: implementation_summary_issue_471.md  issue-189-weekly-timeframe.md  issue-409-plan.md  issue-451-plan.md  issue-472-plan.md  issue-473-plan.md  plan_issue_471.md
.specify/memory/: constitution.md
.specify/specs/: README.md
api/: dependencies.py  main.py
api/models/: alerting.py  asset_details.py  fund.py  homepage.py  indicator.py  order.py  report.py  search.py  tradingview.py  watchlist.py  workflow.py
api/routers/: alerting.py  asset_details.py  enums.py  fund.py  homepage.py  indexes.py  indicator.py  order.py  report.py  search.py  tradingview.py  watchlist.py  workflow.py
api/services/: alerting_service.py  asset_details_service.py  binance_report_service.py  fund_service.py  indicator_service.py  report_service.py  search_service.py  watchlist_service.py  workflow_service.py
client/: aws_client.py  binance_client.py  client_helper.py  gsheet_client.py  mock_saxo_client.py  saxo.py  saxo_auth_client.py  saxo_client.py  zone_bourse_client.py
engines/: workflow_engine.py  workflow_loader.py  workflows.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  shared.css
model/: __init__.py  asset.py  enum.py  enum_with_get_value.py  helper.py  workflow.py  workflow_api.py  zone_bourse.py
pulumi/: Pulumi.prd.yaml  Pulumi.yaml  README.md  __main__.py  dynamodb.py  ecr.py  iam.py  lambda_.py  s3.py  scheduler.py
saxo_order/: __init__.py  async_utils.py  auth.py  available_funds.py  cli.py  search.py  service.py  set_oco_order.py  set_order.py  set_stop_limit_order.py
saxo_order/commands/: __init__.py  alerting.py  auth.py  available_funds.py  binance.py  common.py  fundamental.py  get_report.py  input_helper.py  internal.py  k_order.py  search.py  set_oco_order.py  set_order.py  set_stop_limit_order.py  shortcuts.py  snapshot.py  workflow.py
saxo_order/services/: order_service.py
scripts/: migrate_workflows.py
services/: candles_service.py  congestion_indicator.py  indicator_service.py  workflow_service.py
specs/001-alerts-ui-page/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/002-asset-detail-alerts/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/003-on-demand-alerts/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/004-watchlist-menu/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-filter-old-alerts/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-alert-system-french-stocks/: plan.md  spec.md
specs/007-slwin-tag/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-workflow-system-doc/: spec.md
specs/009-workflow-db-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-workflow-execution-tracking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-async-dynamodb-operations/: CODE_TEMPLATES.md  MIGRATION_GUIDE.md  README.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-sidebar-navigation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-workflow-orders-list/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
utils/: cache.py  configuration.py  exception.py  helper.py  json_util.py  logger.py  tradingview.py
(+164 files in other folders)
