[tool.poetry]
name = "saxo-order"
version = "0.1.0"
description = ""
authors = ["Kiva"]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.0.1"
requests = "^2.32.5"
pyyaml = "^6.0"
types-requests = "^2.32.0.20240712"
google-api-python-client = "^2.146.0"
google-auth-oauthlib = "^1.2.0"
binance-connector = "^3.7.0"
beautifulsoup4 = "^4.12.3"
slack-sdk = "^3.30.0"
numpy = "^2.1.1"
boto3 = "^1.40.49"
pulumi = {version = "^3.148.0", extras = ["pulumi"]}
pulumi-aws = {version = "^7.8.0", extras = ["pulumi"]}
prettytable = "^3.12.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.0"

[tool.poetry.dev-dependencies]
black = "^25.9.0"
pytest = "^8.1.1"
pytest-cov = "^6.0.0"
mypy = "^1.15.0"
pytest-mock = "^3.14.0"
mock = "^5.1.0"
google-api-python-client-stubs = "^1.24.0"
google-auth-stubs = "^0.3.0"
isort = "^6.1.0"
types-beautifulsoup4 = "^4.12.0"
types-boto3 = "^1.40.49"
types-pyyaml = "^6.0.12.20250516"
flake8 = "^7.1.0"
httpx = "^0.27.0"

[tool.poetry.scripts]
k-order = "saxo_order.commands.k_order:k_order"
k-api = "run_api:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest]
mock_use_standalone_module = true

[tool.black]
line-length = 79

