[tool.poetry]
name = "saxo-order"
version = "0.1.0"
description = ""
authors = ["Kiva"]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.3.1"
requests = "^2.32.5"
pyyaml = "^6.0"
types-requests = "^2.32.4.20250913"
google-api-python-client = "^2.187.0"
google-auth-oauthlib = "^1.2.3"
binance-connector = "^3.7.0"
beautifulsoup4 = "^4.14.2"
slack-sdk = "^3.37.0"
numpy = "^2.3.5"
boto3 = "^1.40.69"
pulumi = {version = "^3.206.0", extras = ["pulumi"]}
pulumi-aws = {version = "^7.11.1", extras = ["pulumi"]}
prettytable = "^3.12.0"
fastapi = "^0.121.1"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic = "^2.12.4"
cachetools = "^6.2.1"

[tool.poetry.dev-dependencies]
black = "^25.11.0"
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
mypy = "^1.18.2"
pytest-mock = "^3.15.1"
mock = "^5.1.0"
google-api-python-client-stubs = "^1.24.0"
google-auth-stubs = "^0.3.0"
isort = "^7.0.0"
types-beautifulsoup4 = "^4.12.0"
types-boto3 = "^1.42.40"
types-pyyaml = "^6.0.12.20250915"
flake8 = "^7.3.0"
httpx = "^0.28.1"

[tool.poetry.scripts]
k-order = "saxo_order.commands.k_order:k_order"
k-api = "run_api:main"

[tool.poetry.group.dev.dependencies]
types-cachetools = "^6.2.0.20251022"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
mock_use_standalone_module = "true"

[tool.black]
line-length = 79

